DDF-3297 add security manager to DDF